--- a/src/view/LoginForm.fxml
+++ b/src/view/LoginForm.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LoginController">
    <children>
       <VBox prefHeight="400.0" prefWidth="600.0">
          <children>
@@ -22,31 +22,22 @@
                      <children>
                         <VBox prefWidth="560.0">
                            <children>
-                              <HBox prefHeight="75.0" prefWidth="200.0">
+                              <HBox alignment="TOP_RIGHT" prefHeight="75.0" prefWidth="200.0">
                                  <children>
-                                    <VBox alignment="CENTER_LEFT" prefHeight="200.0" prefWidth="360.0">
-                                       <children>
-                                          <Label text="Appointment Manager Login">
-                                             <font>
-                                                <Font name="System Bold" size="18.0" />
-                                             </font>
-                                             <VBox.margin>
-                                                <Insets left="20.0" />
-                                             </VBox.margin>
-                                          </Label>
-                                       </children>
-                                    </VBox>
-                                    <VBox prefHeight="200.0" prefWidth="200.0">
+                                    <VBox alignment="TOP_RIGHT" prefHeight="200.0" prefWidth="200.0">
                                        <children>
                                           <HBox alignment="CENTER" prefHeight="75.0" prefWidth="100.0" style="-fx-border-color: black; -fx-border-radius: 5px;">
                                              <VBox.margin>
                                                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                              </VBox.margin>
                                              <children>
-                                                <Label alignment="TOP_LEFT" text="Locale: ">
+                                                <Label fx:id="loginLocaleTitleLbl" alignment="TOP_LEFT" text="Locale:">
                                                    <font>
                                                       <Font size="18.0" />
                                                    </font>
+                                                   <padding>
+                                                      <Insets right="5.0" />
+                                                   </padding>
                                                 </Label>
                                                 <Label fx:id="loginLocaleLbl" layoutX="11.0" layoutY="11.0" text="EN-US">
                                                    <font>
@@ -59,13 +50,28 @@
                                     </VBox>
                                  </children>
                               </HBox>
+                              <VBox prefHeight="28.0" prefWidth="200.0">
+                                 <children>
+                                    <Label fx:id="loginTitleLbl" text="Appointment Manager Login">
+                                       <font>
+                                          <Font name="System Bold" size="18.0" />
+                                       </font>
+                                       <VBox.margin>
+                                          <Insets />
+                                       </VBox.margin>
+                                    </Label>
+                                 </children>
+                                 <VBox.margin>
+                                    <Insets left="15.0" top="5.0" />
+                                 </VBox.margin>
+                              </VBox>
                               <HBox alignment="CENTER" prefHeight="180.0" prefWidth="200.0">
                                  <children>
                                     <VBox alignment="CENTER" prefWidth="560.0">
                                        <children>
                                           <HBox alignment="CENTER" prefHeight="30.0" prefWidth="200.0">
                                              <children>
-                                                <Label text="Username: ">
+                                                <Label fx:id="loginUsernameTitleLbl" prefWidth="100.0" text="Username: ">
                                                    <font>
                                                       <Font size="14.0" />
                                                    </font>
@@ -85,7 +91,7 @@
                                           </HBox>
                                           <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="30.0" prefWidth="200.0">
                                              <children>
-                                                <Label prefWidth="70.0" text="Password:">
+                                                <Label fx:id="loginPasswordTitleLbl" prefWidth="100.0" text="Password:">
                                                    <font>
                                                       <Font size="14.0" />
                                                    </font>
