--- a/src/view/LoginForm.fxml
+++ b/src/view/LoginForm.fxml
@@ -11,136 +11,116 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LoginController">
    <children>
-      <VBox prefHeight="400.0" prefWidth="600.0">
+      <HBox prefHeight="400.0" prefWidth="600.0">
          <children>
-            <HBox prefHeight="400.0" prefWidth="600.0" style="-fx-border-color: black; -fx-border-radius: 5px;">
-               <VBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </VBox.margin>
+            <VBox alignment="CENTER" prefWidth="580.0" style="-fx-border-color: black; -fx-border-radius: 5px;">
                <children>
-                  <HBox prefHeight="100.0" prefWidth="560.0">
+                  <HBox alignment="CENTER_RIGHT" prefHeight="60.0" prefWidth="200.0">
                      <children>
-                        <VBox prefWidth="560.0">
+                        <HBox alignment="CENTER" maxHeight="-Infinity" prefHeight="60.0" prefWidth="279.0" style="-fx-border-color: black; -fx-border-radius: 5px;">
                            <children>
-                              <HBox alignment="TOP_RIGHT" prefHeight="75.0" prefWidth="200.0">
-                                 <children>
-                                    <VBox alignment="TOP_RIGHT" prefHeight="200.0" prefWidth="200.0">
-                                       <children>
-                                          <HBox alignment="CENTER" prefHeight="75.0" prefWidth="100.0" style="-fx-border-color: black; -fx-border-radius: 5px;">
-                                             <VBox.margin>
-                                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                             </VBox.margin>
-                                             <children>
-                                                <Label fx:id="loginLocaleTitleLbl" alignment="TOP_LEFT" text="Locale:">
-                                                   <font>
-                                                      <Font size="18.0" />
-                                                   </font>
-                                                   <padding>
-                                                      <Insets right="5.0" />
-                                                   </padding>
-                                                </Label>
-                                                <Label fx:id="loginLocaleLbl" layoutX="11.0" layoutY="11.0" text="EN-US">
-                                                   <font>
-                                                      <Font size="18.0" />
-                                                   </font>
-                                                </Label>
-                                             </children>
-                                          </HBox>
-                                       </children>
-                                    </VBox>
-                                 </children>
-                              </HBox>
-                              <VBox prefHeight="28.0" prefWidth="200.0">
-                                 <children>
-                                    <Label fx:id="loginTitleLbl" text="Appointment Manager Login">
-                                       <font>
-                                          <Font name="System Bold" size="18.0" />
-                                       </font>
-                                       <VBox.margin>
-                                          <Insets />
-                                       </VBox.margin>
-                                    </Label>
-                                 </children>
-                                 <VBox.margin>
-                                    <Insets left="15.0" top="5.0" />
-                                 </VBox.margin>
-                              </VBox>
-                              <HBox alignment="CENTER" prefHeight="180.0" prefWidth="200.0">
-                                 <children>
-                                    <VBox alignment="CENTER" prefWidth="560.0">
-                                       <children>
-                                          <HBox alignment="CENTER" prefHeight="30.0" prefWidth="200.0">
-                                             <children>
-                                                <Label fx:id="loginUsernameTitleLbl" prefWidth="100.0" text="Username: ">
-                                                   <font>
-                                                      <Font size="14.0" />
-                                                   </font>
-                                                   <HBox.margin>
-                                                      <Insets right="10.0" />
-                                                   </HBox.margin>
-                                                </Label>
-                                                <TextField fx:id="loginUsernameText" prefWidth="170.0">
-                                                   <HBox.margin>
-                                                      <Insets />
-                                                   </HBox.margin>
-                                                </TextField>
-                                             </children>
-                                             <VBox.margin>
-                                                <Insets bottom="10.0" />
-                                             </VBox.margin>
-                                          </HBox>
-                                          <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="30.0" prefWidth="200.0">
-                                             <children>
-                                                <Label fx:id="loginPasswordTitleLbl" prefWidth="100.0" text="Password:">
-                                                   <font>
-                                                      <Font size="14.0" />
-                                                   </font>
-                                                   <HBox.margin>
-                                                      <Insets right="10.0" />
-                                                   </HBox.margin>
-                                                </Label>
-                                                <TextField fx:id="loginPasswordText" prefWidth="170.0" />
-                                             </children>
-                                             <VBox.margin>
-                                                <Insets bottom="10.0" />
-                                             </VBox.margin>
-                                          </HBox>
-                                          <HBox fx:id="loginErrorLbl" alignment="CENTER" prefHeight="25.0" prefWidth="100.0">
-                                             <children>
-                                                <Label textFill="RED">
-                                                   <font>
-                                                      <Font size="13.0" />
-                                                   </font>
-                                                </Label>
-                                             </children>
-                                          </HBox>
-                                       </children>
-                                    </VBox>
-                                 </children>
+                              <Label fx:id="loginLocationTitleLbl" alignment="TOP_LEFT" text="Location:">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
                                  <padding>
-                                    <Insets top="19.0" />
+                                    <Insets right="5.0" />
                                  </padding>
-                              </HBox>
-                              <HBox alignment="TOP_CENTER" prefHeight="80.0" prefWidth="200.0">
-                                 <children>
-                                    <Button fx:id="loginLoginButton" mnemonicParsing="false" prefHeight="40.0" prefWidth="100.0" text="Login">
-                                       <HBox.margin>
-                                          <Insets right="80.0" />
-                                       </HBox.margin>
-                                    </Button>
-                                    <Button fx:id="loginExitButton" mnemonicParsing="false" prefHeight="40.0" prefWidth="100.0" text="Exit" />
-                                 </children>
-                              </HBox>
+                              </Label>
+                              <Label fx:id="loginLocationLbl" text="America/New York">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </Label>
                            </children>
-                        </VBox>
+                        </HBox>
+                     </children>
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin>
+                  </HBox>
+                  <VBox prefHeight="28.0" prefWidth="200.0">
+                     <children>
+                        <Label fx:id="loginTitleLbl" text="Appointment Manager Login">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                        </Label>
+                     </children>
+                     <VBox.margin>
+                        <Insets left="10.0" top="20.0" />
+                     </VBox.margin>
+                  </VBox>
+                  <VBox alignment="CENTER" minHeight="-Infinity" prefHeight="180.0" prefWidth="560.0">
+                     <children>
+                        <HBox alignment="CENTER" prefHeight="30.0" prefWidth="200.0">
+                           <children>
+                              <Label fx:id="loginUsernameTitleLbl" prefWidth="140.0" text="Username:">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </Label>
+                              <TextField fx:id="loginUsernameText" prefWidth="170.0" />
+                           </children>
+                           <VBox.margin>
+                              <Insets bottom="10.0" />
+                           </VBox.margin>
+                        </HBox>
+                        <HBox alignment="CENTER" prefHeight="30.0" prefWidth="200.0">
+                           <children>
+                              <Label fx:id="loginPasswordTitleLbl" prefWidth="140.0" text="Password:">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                                 <HBox.margin>
+                                    <Insets />
+                                 </HBox.margin>
+                              </Label>
+                              <TextField fx:id="loginPasswordText" prefWidth="170.0" />
+                           </children>
+                           <VBox.margin>
+                              <Insets />
+                           </VBox.margin>
+                        </HBox>
+                        <HBox alignment="CENTER" prefHeight="60.0" prefWidth="200.0">
+                           <children>
+                              <Label textFill="RED">
+                                 <font>
+                                    <Font size="13.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </HBox>
+                     </children>
+                     <VBox.margin>
+                        <Insets />
+                     </VBox.margin>
+                     <padding>
+                        <Insets top="30.0" />
+                     </padding>
+                  </VBox>
+                  <HBox alignment="TOP_CENTER" minWidth="-Infinity" prefHeight="80.0" prefWidth="0.0">
+                     <children>
+                        <Button fx:id="loginLoginButton" mnemonicParsing="false" prefHeight="40.0" prefWidth="100.0" text="Login">
+                           <HBox.margin>
+                              <Insets right="80.0" />
+                           </HBox.margin>
+                        </Button>
+                        <Button fx:id="loginExitButton" mnemonicParsing="false" prefHeight="40.0" prefWidth="100.0" text="Exit" />
                      </children>
                   </HBox>
                </children>
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin>
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
-            </HBox>
+            </VBox>
          </children>
-      </VBox>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
+      </HBox>
    </children>
 </AnchorPane>
