--- a/src/view/EditAppointmentForm.fxml
+++ b/src/view/EditAppointmentForm.fxml
@@ -262,12 +262,12 @@
             </HBox>
             <HBox alignment="TOP_CENTER" prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <Button fx:id="editAppointmentSaveBtn" mnemonicParsing="false" prefHeight="40.0" prefWidth="140.0" text="Save">
+                  <Button fx:id="editAppointmentSaveBtn" mnemonicParsing="false" onAction="#onActionSave" prefHeight="40.0" prefWidth="140.0" text="Save">
                      <HBox.margin>
                         <Insets right="80.0" />
                      </HBox.margin>
                   </Button>
-                  <Button fx:id="editAppointmentCancelBtn" mnemonicParsing="false" prefHeight="40.0" prefWidth="140.0" text="Cancel" />
+                  <Button fx:id="editAppointmentCancelBtn" mnemonicParsing="false" onAction="#onActionCancel" prefHeight="40.0" prefWidth="140.0" text="Cancel" />
                </children>
                <padding>
                   <Insets top="20.0" />
