Add basic navigation to all report related forms

--- a/src/view/AppointmentsReportForm.fxml
+++ b/src/view/AppointmentsReportForm.fxml
@@ -82,12 +82,12 @@
             </HBox>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <Button fx:id="byContactGenerateReportBtn" mnemonicParsing="false" prefHeight="40.0" prefWidth="140.0" text="Generate Report">
+                  <Button fx:id="byContactGenerateReportBtn" mnemonicParsing="false" onAction="#onActionGenerateReport" prefHeight="40.0" prefWidth="140.0" text="Generate Report">
                      <HBox.margin>
                         <Insets right="80.0" />
                      </HBox.margin>
                   </Button>
-                  <Button fx:id="byContactMainMenuBtn" mnemonicParsing="false" prefHeight="40.0" prefWidth="140.0" text="Return to Main Menu" />
+                  <Button fx:id="byContactMainMenuBtn" mnemonicParsing="false" onAction="#onActionMainMenu" prefHeight="40.0" prefWidth="140.0" text="Return to Main Menu" />
                </children>
             </HBox>
          </children>
