--- a/src/view/TotalsByTypeReportForm.fxml
+++ b/src/view/TotalsByTypeReportForm.fxml
@@ -9,7 +9,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.TotalsByTypeReportController">
    <children>
       <VBox prefHeight="700.0" prefWidth="650.0">
@@ -101,12 +100,12 @@
             </HBox>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <Button fx:id="byTypeGenerateBtn" mnemonicParsing="false" prefHeight="40.0" prefWidth="140.0" text="Generate Report">
+                  <Button fx:id="byTypeGenerateBtn" mnemonicParsing="false" onAction="#onActionGenerateReport" prefHeight="40.0" prefWidth="140.0" text="Generate Report">
                      <HBox.margin>
                         <Insets right="80.0" />
                      </HBox.margin>
                   </Button>
-                  <Button fx:id="byTypeMainMenuBtn" mnemonicParsing="false" prefHeight="40.0" prefWidth="140.0" text="Return to Main Menu" />
+                  <Button fx:id="byTypeMainMenuBtn" mnemonicParsing="false" onAction="#onActionMainMenu" prefHeight="40.0" prefWidth="140.0" text="Return to Main Menu" />
                </children>
             </HBox>
          </children>
