--- a/src/view/AddAppointmentForm.fxml
+++ b/src/view/AddAppointmentForm.fxml
@@ -159,7 +159,7 @@
                                     <Insets right="20.0" />
                                  </HBox.margin>
                               </Label>
-                              <DatePicker fx:id="addAppointmentDate" prefWidth="180.0" />
+                              <DatePicker fx:id="addAppointmentDate" onAction="#onActionSelectDate" prefWidth="180.0" />
                            </children>
                            <VBox.margin>
                               <Insets left="40.0" right="40.0" />
@@ -170,7 +170,7 @@
                         </HBox>
                         <HBox alignment="CENTER_LEFT" prefWidth="200.0">
                            <children>
-                              <Label prefWidth="130.0" text="Start Time:">
+                              <Label prefWidth="130.0" text="Appointment Start:">
                                  <font>
                                     <Font size="14.0" />
                                  </font>
@@ -178,7 +178,7 @@
                                     <Insets right="20.0" />
                                  </HBox.margin>
                               </Label>
-                              <ComboBox fx:id="addAppointmentStartCombo" prefWidth="180.0" />
+                              <ComboBox fx:id="addAppointmentStartCombo" onAction="#onActionSelectStart" prefWidth="180.0" />
                            </children>
                            <VBox.margin>
                               <Insets left="40.0" right="40.0" />
@@ -189,7 +189,7 @@
                         </HBox>
                         <HBox alignment="CENTER_LEFT" prefWidth="200.0">
                            <children>
-                              <Label prefWidth="130.0" text="End Time:">
+                              <Label prefWidth="130.0" text="Appointment End:">
                                  <font>
                                     <Font size="14.0" />
                                  </font>
@@ -197,7 +197,7 @@
                                     <Insets right="20.0" />
                                  </HBox.margin>
                               </Label>
-                              <ComboBox fx:id="addAppointmentEndCombo" prefWidth="180.0" />
+                              <ComboBox fx:id="addAppointmentEndCombo" disable="true" onAction="#onActionSelectEnd" prefWidth="180.0" />
                            </children>
                            <VBox.margin>
                               <Insets left="40.0" right="40.0" />
