--- a/src/view/EditAppointmentForm.fxml
+++ b/src/view/EditAppointmentForm.fxml
@@ -197,7 +197,7 @@
                                     <Insets right="20.0" />
                                  </HBox.margin>
                               </Label>
-                              <ComboBox fx:id="editAppointmentEndCombo" onAction="#onActionSelectEnd" prefWidth="180.0" />
+                              <ComboBox fx:id="editAppointmentEndCombo" disable="true" prefWidth="180.0" />
                            </children>
                            <VBox.margin>
                               <Insets left="40.0" right="40.0" />
